# scalable_rcas

./: .gitignore  CMakeLists.txt  README.md  REPRODUCIBILITY.md
apps/: app.cpp  count_pages.cpp  create_index.cpp  csv2partition.cpp  partition2csv.cpp  query_index.cpp  repartition.cpp  selectivity_computer.cpp
benchmarks/: exp_cost_model.cpp  exp_dataset_size.cpp  exp_dsc_computation.cpp  exp_insertion.cpp  exp_lazy_interleaving.cpp  exp_mem_insertion.cpp  exp_memory_keys.cpp  exp_memory_management.cpp  exp_page_size.cpp  exp_partitioning_threshold.cpp  exp_querying.cpp  exp_structure.cpp
include/benchmark/: exp_dataset_size.hpp  exp_dsc_computation.hpp  exp_input_size.hpp  exp_insertion.hpp  exp_lazy_interleaving.hpp  exp_mem_insertion.hpp  exp_memory_keys.hpp  exp_memory_management.hpp  exp_page_size.hpp  exp_partitioning_threshold.hpp  exp_querying.hpp  exp_structure.hpp  option_parser.hpp
include/cas/: binary_key.hpp  bulk_loader.hpp  bulk_loader_stats.hpp  context.hpp  dimension.hpp  histogram.hpp  index.hpp  index_stats.hpp  inode.hpp  key.hpp  key_decoder.hpp  key_encoder.hpp  key_encoding.hpp  linear_search.hpp  memory_page.hpp  memory_pool.hpp  node_reader.hpp  page_buffer.hpp  pager.hpp  partition.hpp  partition_table.hpp  path_matcher.hpp  query.hpp  query2.hpp  query_executor.hpp  query_stats.hpp  record.hpp  ref.hpp  search_key.hpp  swh_pid.hpp  types.hpp  util.hpp
include/cas/mem/: insertion.hpp  node.hpp  node0.hpp  node16.hpp  node256.hpp  node4.hpp  node48.hpp
queries/: amazon.csv  handpicked_queries.csv  serverfarm.csv  swh.csv  swh_random.csv  xmark.csv
scripts/: BtreeQueryPerformance.java  btree_query_performance.rb  btree_scalability_experiment.rb  clear_page_cache.sh  count_unique.rb  count_unique_paths.rb  create_btree.rb  disk_io.sh  disk_io_pid.sh  exp_querying_rcas.rb  exp_querying_solr.rb  exp_structure.sh  gnusort_scalability_experiment.rb  io_estimation.rb  max_path_length.rb  query_solr.rb  rcasplus_query_performance.rb  shorten_revision.rb
src/: CMakeLists.txt
src/benchmark/: exp_dataset_size.cpp  exp_dsc_computation.cpp  exp_insertion.cpp  exp_lazy_interleaving.cpp  exp_mem_insertion.cpp  exp_memory_keys.cpp  exp_memory_management.cpp  exp_page_size.cpp  exp_partitioning_threshold.cpp  exp_querying.cpp  exp_structure.cpp
src/cas/: binary_key.cpp  bulk_loader.cpp  bulk_loader_stats.cpp  dimension.cpp  histogram.cpp  index.cpp  index_stats.cpp  key.cpp  key_decoder.cpp  key_encoder.cpp  linear_search.cpp  memory_page.cpp  memory_pool.cpp  page_buffer.cpp  pager.cpp  partition.cpp  partition_table.cpp  path_matcher.cpp  query.cpp  query2.cpp  query_executor.cpp  query_stats.cpp  record.cpp  search_key.cpp  swh_pid.cpp  types.cpp  util.cpp
src/cas/mem/: insertion.cpp  node.cpp  node0.cpp  node16.cpp  node256.cpp  node4.cpp  node48.cpp
tests/: CMakeLists.txt
tests/cas/: path_matcher_test.cpp
